# sniper-core

./: .env  .gitignore  AUTOMATION.txt  AUTOMATION_CODE.md  AUTOMATION_STATE.md  Cargo.toml  DOCS.md  README.md  SCRIPTING.md  gensrc.sh
chrome_profile/: Local State  SingletonCookie  SingletonLock  SingletonSocket
chrome_profile/Default/: BrowsingTopicsState  Cookies  DIPS-wal  Favicons  Favicons-journal  History  History-journal  Preferences  Reporting and NEL  Web Data
chrome_profile/Default/Cache/Cache_Data/: 00b880b810f041e0_0  02322ee638ee99c2_0  0660580915b28c02_0  074c6677a5893f10_0  08371a94d4237b7d_0  0aeb63c96a8c2287_0  0baee8e0bcfcfc33_0  0d1612014bdde02c_0  0df078ce13a817ec_0  0e6f0d16dc83c799_0  0f93c03df5090045_0  0fd16ade444030a8_0  1238320b4272bdf4_0  12e1cc1fb95fb0de_0  13ba881c271d9ebb_0  1624b5ef81adf643_0  16b3d45497f4235b_0  17053cda18a1503a_0  1741d70f35c27844_0  183d9e6abf7bd0ee_0  193eb384553ed6ce_0  1d91552ca476be9a_0  1e4f16b7fb7555aa_0  213bf251d2d20510_0  218873f791e4824b_0  22ddf65618d41596_0  25c2c504d535923d_0  269dbedd2a7745ca_0  273d95b5243bc08d_0  28233c803501bb64_0  28652bc1474d0a61_0  2a58f4eab9a7b926_0  2a842183292fae03_0  2b8dc007c0c84df7_0  308eaeeebf224a01_0  31ab13acdcd7f328_0  337d59e974a2e324_0  35d7f3a029ef5589_0  (+139 more)
chrome_profile/Default/DawnGraphiteCache/: index
chrome_profile/Default/DawnWebGPUCache/: index
chrome_profile/Default/Extension Rules/: LOG
chrome_profile/Default/Extension Scripts/: LOG
chrome_profile/Default/Extension State/: LOG  LOG.old
chrome_profile/Default/GCM Store/: LOG
chrome_profile/Default/GPUCache/: data_0  data_1  data_2  index
chrome_profile/Default/Session Storage/: LOG
chrome_profile/Default/Sessions/: Session_13416893540569584  Tabs_13416894429489224
chrome_profile/Default/Shared Dictionary/: db
chrome_profile/Default/Site Characteristics Database/: LOG  LOG.old
chrome_profile/Default/WebStorage/: QuotaManager  QuotaManager-journal
chrome_profile/Default/shared_proto_db/: LOG
chrome_profile/GrShaderCache/: data_0  data_1  f_000001  index
chrome_profile/GraphiteDawnCache/: index
chrome_profile/ShaderCache/: data_0  data_1  data_2  index
chrome_profile/segmentation_platform/: ukm_db
raw/nmr.novastrum.dev/: tr.html
src/: app.rs  logger.rs  main.rs  state.rs
src/backend/: mod.rs  scraper.rs  translator.rs  utils.rs
src/config/: loader.rs  migration.rs  mod.rs
src/core/: error.rs  mod.rs  video_downloader.rs
src/core/automation/: cdp_driver.rs  context.rs  driver.rs  dsl.rs  engine.rs  mod.rs  runtime.rs
src/core/browser/: mod.rs
src/core/dom/: mod.rs
src/core/downloader/: mod.rs
src/core/events/: mod.rs
src/core/network/: mod.rs
src/core/scripting/: engine.rs  knowledge.rs  mod.rs  templates.rs  types.rs
src/ui/: automation.rs  config_panel.rs  design.rs  log_panel.rs  media_panel.rs  mod.rs  network_panel.rs  scrape.rs  scripting.rs  storage_panel.rs  translate.rs
(+86 files in other folders)
