[package]
name = "auto-crawler"
version = "1.0.0"
edition = "2021"

[dependencies]
# UI Framework
eframe = "0.31"
egui = "0.31"
rfd = "0.14"

# CDP & Engine
chromiumoxide = { version = "0.6", features = ["tokio"] }

# Async & Networking
tokio = { version = "1", features = ["full"] }
rquest = { version = "5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
futures = "0.3"

# Error & Logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"

# Utilities
dotenv = "0.15"
lazy_static = "1.4"
libc = "0.2"
clap = { version = "4.5.60", features = ["derive"] }
scraper = "0.25.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev.package."*"]
opt-level = 3
